# kaldiio

./: CMakeLists.txt  README.md
kaldiio/: CMakeLists.txt  compressed-matrix.cc  compressed-matrix.h  io-funcs-inl.h  io-funcs.cc  io-funcs.h  kaldi-holder-inl.h  kaldi-holder.cc  kaldi-holder.h  kaldi-io.cc  kaldi-io.h  kaldi-matrix-inl.h  kaldi-matrix.cc  kaldi-matrix.h  kaldi-pipebuf.h  kaldi-semaphore.cc  kaldi-semaphore.h  kaldi-table-inl.h  kaldi-table.cc  kaldi-table.h  kaldi-utils.cc  kaldi-vector.cc  kaldi-vector.h  matrix-shape.cc  matrix-shape.h  parse-options.cc  posterior.cc  posterior.h  text-utils.cc  wave-reader.cc  wave-reader.h
kaldiio/fbank/: feature-fbank.cc  feature-fbank.h  feature-window.cc  feature-window.h  log.cc  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  rfft.cc
